added the launch svg and sensors to the front end

--- a/RocketControlUnitGUI/src/styles/launch.postcss
+++ b/RocketControlUnitGUI/src/styles/launch.postcss
@@ -11,368 +11,566 @@
 
 .pbv1_slider {
     position: absolute;
-    top: calc(var(--container-width) * 0.125);
-    left: 17%;
+    top: calc(var(--container-width) * 0.143);
+    left: 15.5%;
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 2000));
     font-size: 16px;
 }
 
 .pbv2_slider {
     position: absolute;
-    top: calc(var(--container-width) * 0.055);
-    left: 34%;
+    top: calc(var(--container-width) * 0.048);
+    left: 33.5%;
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 2000));
     font-size: 16px;
 }
 
 .pbv3_slider {
     position: absolute;
-    top: calc(var(--container-width) * 0.275);
-    left: 19%;
+    top: calc(var(--container-width) * 0.292);
+    left: 17%;
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 2000));
     font-size: 16px;
 }
 
 .pbv4_slider {
     position: absolute;
-    top: calc(var(--container-width) * 0.23);
-    left: 34%;
+    top: calc(var(--container-width) * 0.318);
+    left: 34.3%;
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 2000));
     font-size: 16px;
 }
 
 .pbv5_slider {
     position: absolute;
-    top: calc(var(--container-width) * 0.107);
-    left: 84%;
+    top: calc(var(--container-width) * 0);
+    left: 0%;
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 2000));
     font-size: 16px;
+    visibility:hidden;
 }
 
 .pbv6_slider {
     position: absolute;
-    top: calc(var(--container-width) * 0.109);
-    left: 95.8%;
+    top: calc(var(--container-width) * 0);
+    left: 0%;
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 2000));
     font-size: 16px;
+    visibility:hidden;
 }
 
 .pbv7_slider {
     position: absolute;
-    top: calc(var(--container-width) * 0.345);
-    left: 42.6%;
+    top: calc(var(--container-width) * 0);
+    left: 0%;
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 2000));
     font-size: 16px;
+    visibility:hidden;
 }
 
 .pbv8_slider {
     position: absolute;
-    top: calc(var(--container-width) * 0.273);
-    left: 50%;
+    top: calc(var(--container-width) * 0);
+    left: 0%;
+    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 2000));
+    font-size: 16px;
+    visibility:hidden;
+}
+
+.pbv9_slider {
+    position: absolute;
+    top: calc(var(--container-width) * 0);
+    left: 0%;
+    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 2000));
+    font-size: 16px;
+    visibility:hidden;
+}
+
+.pbv10_slider {
+    position: absolute;
+    top: calc(var(--container-width) * 0);
+    left: 0%;
+    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 2000));
+    font-size: 16px;
+    visibility:hidden;
+}
+
+.pbv11_slider {
+    position: absolute;
+    top: calc(var(--container-width) * 0);
+    left: 0%;
+    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 2000));
+    font-size: 16px;
+    visibility:hidden;
+}
+
+.sol1_slider {
+    position: absolute;
+    top: calc(var(--container-width) * 0.143);
+    left: 23%;
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 2000));
     font-size: 16px;
 }
 
-.pmp3_slider {
+.sol2_slider {
     position: absolute;
-    top: calc(var(--container-width) * 0.321);
-    left: 84%;
+    top: calc(var(--container-width) * 0.3);
+    left: 24%;
+    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 2000));
+    font-size: 16px;
+}
+
+.sol3_slider {
+    position: absolute;
+    top: calc(var(--container-width) * 0.1);
+    left: 53.3%;
+    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 2000));
+    font-size: 16px;
+}
+
+.sol4_slider {
+    position: absolute;
+    top: calc(var(--container-width) * 0.192);
+    left: 53.3%;
+    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 2000));
+    font-size: 16px;
+    visibility:visible;
+}
+
+.sol5_slider {
+    position: absolute;
+    top: calc(var(--container-width) * 0.229);
+    left: 53.3%;
+    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 2000));
+    font-size: 16px;
+}
+
+.sol6_slider {
+    position: absolute;
+    top: calc(var(--container-width) * 0.265);
+    left: 53.3%;
+    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 2000));
+    font-size: 16px;
+}
+
+.sol7_slider {
+    position: absolute;
+    top: calc(var(--container-width) * 0.341);
+    left: 53.3%;
+    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 2000));
+    font-size: 16px;
+}
+
+.sol8_slider {
+    position: absolute;
+    top: calc(var(--container-width) * 0.378);
+    left: 53.3%;
+    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 2000));
+    font-size: 16px;
+}
+
+.sol9_slider {
+    position: absolute;
+    top: calc(var(--container-width) * 0.414);
+    left: 53.3%;
+    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 2000));
+    font-size: 16px;
+}
+
+.sol10_slider {
+    position: absolute;
+    top: calc(var(--container-width) * 0.075);
+    left: 79.5%;
+    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 2000));
+    font-size: 16px;
+}
+
+.sol11_slider {
+    position: absolute;
+    top: calc(var(--container-width) * 0.233);
+    left: 91.2%;
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 2000));
     font-size: 16px;
 }
 
 .sol12_slider {
     position: absolute;
-    top: calc(var(--container-width) * 0.395);
-    left: 29%;
+    top: calc(var(--container-width) * 0.345);
+    left: 80%;
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 2000));
     font-size: 16px;
 }
 
 .sol13_slider {
     position: absolute;
-    top: calc(var(--container-width) * 0.46);
-    left: 29%;
+    top: calc(var(--container-width) * 0.403);
+    left: 79.7%;
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 2000));
     font-size: 16px;
 }
 
+.sol14_slider {
+    position: absolute;
+    top: calc(var(--container-width) * 0.367);
+    left: 91.3%;
+    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 2000));
+    font-size: 16px;
+}
+
+.pmp3_slider {
+    position: absolute;
+    top: calc(var(--container-width) * 0);
+    left: 0%;
+    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 2000));
+    font-size: 16px;
+    visibility:hidden;
+}
+
 .ign1_slider {
     position: absolute;
-    top: calc(var(--container-width) * 0.41);
-    left: 86%;
+    top: calc(var(--container-width) * 0.468);
+    left: 56.5%;
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 2000));
     font-size: 16px;
 }
 
 .ign2_slider {
     position: absolute;
-    top: calc(var(--container-width) * 0.425);
-    left: 86%;
+    top: calc(var(--container-width) * 0.486);
+    left: 56.5%;
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 2000));
     font-size: 16px;
 }
 
 .heater_slider {
     position: absolute;
-    top: calc(var(--container-width) * 0.452);
-    left: 10.8%;
+    top: calc(var(--container-width) * 0.386);
+    left: 26.4%;
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 2000));
     font-size: 16px;
 }
 
 .tc1_temperature {
     position: absolute;
-    top: calc(var(--container-width) * 0.274);
-    left: 10.75%;
+    top: calc(var(--container-width) * 0.245);
+    left: 10.7%;
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
     font-size: 14px;
 }
 
 .tc2_temperature {
     position: absolute;
-    top: calc(var(--container-width) * 0.441);
-    left: 55.45%;
+    top: calc(var(--container-width) * 0);
+    left: 0%;
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
     font-size: 14px;
+    visibility:hidden;
 }
 
 .tc3_temperature {
     position: absolute;
-    top: calc(var(--container-width) * 0.218);
-    left: 87.6%;
+    top: calc(var(--container-width) * 0);
+    left: 0%;
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
     font-size: 14px;
+    visibility:hidden;
 }
 
 .tc4_temperature {
     position: absolute;
-    top: calc(var(--container-width) * 0.218);
-    left: 96.4%;
+    top: calc(var(--container-width) * 0);
+    left: 0%;
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
     font-size: 14px;
+    visibility:hidden;
 }
 
 .tc5_temperature {
     position: absolute;
-    top: calc(var(--container-width) * 0.2635);
-    left: 89%;
+    top: calc(var(--container-width) * 0);
+    left: 0%;
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
     font-size: 14px;
+    visibility:hidden;
 }
 
 .tc6_temperature {
     position: absolute;
-    top: calc(var(--container-width) * 0.37);
-    left: 89%;
+    top: calc(var(--container-width) * 0);
+    left: 0%;
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
     font-size: 14px;
+    visibility:hidden;
 }
 
 .tc7_temperature {
     position: absolute;
-    top: calc(var(--container-width) * 0.318);
-    left: 97.6%;
+    top: calc(var(--container-width) * 0);
+    left: 0%;
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
     font-size: 14px;
+    visibility:hidden;
 }
 
 .tc8_temperature {
     position: absolute;
-    top: calc(var(--container-width) * 0.363);
-    left: 95.3%;
+    top: calc(var(--container-width) * 0);
+    left: 0%;
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
     font-size: 14px;
+    visibility:hidden;
 }
 
 .tc9_temperature {
     position: absolute;
-    top: calc(var(--container-width) * 0.4115);
-    left: 10.5%;
+    top: calc(var(--container-width) * 0);
+    left: 0%;
+    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
+    font-size: 14px;
+    visibility:hidden;
+}
+
+.tc10_temperature {
+    position: absolute;
+    top: calc(var(--container-width) * 0.215);
+    left: 80.7%;
+    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
+    font-size: 14px;
+}
+
+.tc11_temperature {
+    position: absolute;
+    top: calc(var(--container-width) * 0.436);
+    left: 80.8%;
+    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
+    font-size: 14px;
+}
+
+.tc12_temperature {
+    position: absolute;
+    top: calc(var(--container-width) * 0.437);
+    left: 90.3%;
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
     font-size: 14px;
 }
 
 .lc1_mass {
     position: absolute;
-    top: calc(var(--container-width) * 0.385);
-    left: 5.4%;
+    top: calc(var(--container-width) * 0.355);
+    left: 5%;
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
     font-size: 14px;
 }
 
 .lc2_mass {
     position: absolute;
-    top: calc(var(--container-width) * 0.485);
-    left: 5.3%;
+    top: calc(var(--container-width) * 0.455);
+    left: 5%;
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
     font-size: 14px;
 }
 
 .lc3_mass {
     position: absolute;
-    top: calc(var(--container-width) * 0.175);
-    left: 60.2%;
+    top: calc(var(--container-width) * 0);
+    left: 0%;
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
     font-size: 14px;
+    visibility:hidden;
 }
 
 .lc4_mass {
     position: absolute;
-    top: calc(var(--container-width) * 0.298);
-    left: 60.2%;
+    top: calc(var(--container-width) * 0);
+    left: 0%;
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
     font-size: 14px;
+    visibility:hidden;
 }
 
 .lc5_mass {
     position: absolute;
-    top: calc(var(--container-width) * 0.42);
-    left: 60.2%;
+    top: calc(var(--container-width) * 0);
+    left: 0%;
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
     font-size: 14px;
+    visibility:hidden;
 }
 
 .lc6_mass {
     position: absolute;
-    top: calc(var(--container-width) * 0.313);
-    left: 92.05%;
+    top: calc(var(--container-width) * 0);
+    left: 0%;
+    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
+    font-size: 14px;
+    visibility:hidden;
+}
+
+.lc7_mass {
+    position: absolute;
+    top: calc(var(--container-width) * 0.105);
+    left: 62.5%;
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
     font-size: 14px;
 }
 
 .pt1_pressure {
     position: absolute;
-    top: calc(var(--container-width) * 0.12);
-    left: 9.25%;
+    top: calc(var(--container-width) * 0.446);
+    left: 29.45%;
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
     font-size: 14px;
 }
 
 .pt2_pressure {
     position: absolute;
-    top: calc(var(--container-width) * 0.1205);
-    left: 22.4%;
+    top: calc(var(--container-width) * 0.089);
+    left: 9.28%;
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
     font-size: 14px;
 }
 
 .pt3_pressure {
     position: absolute;
-    top: calc(var(--container-width) * 0.122);
-    left: 29.15%;
+    top: calc(var(--container-width) * 0.091);
+    left: 26.6%;
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
     font-size: 14px;
 }
 
 .pt4_pressure {
     position: absolute;
-    top: calc(var(--container-width) * 0.274);
-    left: 7.1%;
+    top: calc(var(--container-width) * 0.245);
+    left: 6.9%;
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
     font-size: 14px;
 }
 
 .pt5_pressure {
     position: absolute;
-    top: calc(var(--container-width) * 0.3421);
-    left: 22.4%;
+    top: calc(var(--container-width) * 0.246);
+    left: 26.55%;
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
     font-size: 14px;
 }
 
 .pt6_pressure {
     position: absolute;
-    top: calc(var(--container-width) * 0.274);
-    left: 29%;
+    top: calc(var(--container-width) * 0);
+    left: 0%;
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
     font-size: 14px;
+    visibility:hidden;
 }
 
 .pt7_pressure {
     position: absolute;
-    top: calc(var(--container-width) * 0.111);
-    left: 56.75%;
+    top: calc(var(--container-width) * 0);
+    left: 0%;
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
     font-size: 14px;
+    visibility:hidden;
 }
 
 .pt8_pressure {
     position: absolute;
-    top: calc(var(--container-width) * 0.111);
-    left: 63.5%;
+    top: calc(var(--container-width) * 0);
+    left: 0%;
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
     font-size: 14px;
+    visibility:hidden;
 }
 
 .pt9_pressure {
     position: absolute;
-    top: calc(var(--container-width) * 0.3145);
-    left: 51.35%;
+    top: calc(var(--container-width) * 0);
+    left: 0%;
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
     font-size: 14px;
+    visibility:hidden;
 }
 
 .pt10_pressure {
     position: absolute;
-    top: calc(var(--container-width) * 0.3145);
-    left: 54.85%;
+    top: calc(var(--container-width) * 0);
+    left: 0%;
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
     font-size: 14px;
+    visibility:hidden;
 }
 
 .pt11_pressure {
     position: absolute;
-    top: calc(var(--container-width) * 0.441);
-    left: 48.25%;
+    top: calc(var(--container-width) * 0);
+    left: 0%;
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
     font-size: 14px;
+    visibility:hidden;
 }
 
 .pt12_pressure {
     position: absolute;
-    top: calc(var(--container-width) * 0.44);
-    left: 51.83%;
+    top: calc(var(--container-width) * 0);
+    left: 0%;
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
     font-size: 14px;
+    visibility:hidden;
 }
 
 .pt13_pressure {
     position: absolute;
-    top: calc(var(--container-width) * 0.183);
-    left: 87.6%;
+    top: calc(var(--container-width) * 0);
+    left: 0%;
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
     font-size: 14px;
+    visibility:hidden;
 }
 
 .pt14_pressure {
     position: absolute;
-    top: calc(var(--container-width) * 0.183);
-    left: 96.4%;
+    top: calc(var(--container-width) * 0);
+    left: 0%;
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
     font-size: 14px;
+    visibility:hidden;
 }
 
 .pt15_pressure {
     position: absolute;
-    top: calc(var(--container-width) * 0.264);
-    left: 85.38%;
+    top: calc(var(--container-width) * 0.066);
+    left: 86.7%;
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
     font-size: 14px;
 }
 
 .pt16_pressure {
     position: absolute;
-    top: calc(var(--container-width) * 0.37);
-    left: 85.38%;
+    top: calc(var(--container-width) * 0.086);
+    left: 94.85%;
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
     font-size: 14px;
 }
 
 .pt17_pressure {
     position: absolute;
-    top: calc(var(--container-width) * 0.424);
-    left: 21.15%;
+    top: calc(var(--container-width) * 0.182);
+    left: 80.7%;
+    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
+    font-size: 14px;
+}
+
+.pt18_pressure {
+    position: absolute;
+    top: calc(var(--container-width) * 0.374);
+    left: 80.8%;
+    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
+    font-size: 14px;
+}
+
+.pt19_pressure {
+    position: absolute;
+    top: calc(var(--container-width) * 0.405);
+    left: 90.3%;
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
     font-size: 14px;
 }
