--- a/RocketControlUnitGUI/src/styles/static-fire.postcss
+++ b/RocketControlUnitGUI/src/styles/static-fire.postcss
@@ -114,6 +114,114 @@
     font-size: 16px;
 }
 
+.sol3_slider {
+    position: absolute;
+    top: calc(var(--container-width) * 0);
+    left: 0%;
+    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 2000));
+    font-size: 16px;
+    visibility: hidden;
+}
+
+.sol4_slider {
+    position: absolute;
+    top: calc(var(--container-width) * 0);
+    left: 0%;
+    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 2000));
+    font-size: 16px;
+    visibility: hidden;
+}
+
+.sol5_slider {
+    position: absolute;
+    top: calc(var(--container-width) * 0);
+    left: 0%;
+    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 2000));
+    font-size: 16px;
+    visibility: hidden;
+}
+
+.sol6_slider {
+    position: absolute;
+    top: calc(var(--container-width) * 0);
+    left: 0%;
+    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 2000));
+    font-size: 16px;
+    visibility: hidden;
+}
+
+.sol7_slider {
+    position: absolute;
+    top: calc(var(--container-width) * 0);
+    left: 0%;
+    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 2000));
+    font-size: 16px;
+    visibility: hidden;
+}
+
+.sol8_slider {
+    position: absolute;
+    top: calc(var(--container-width) * 0);
+    left: 0%;
+    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 2000));
+    font-size: 16px;
+    visibility: hidden;
+}
+
+.sol9_slider {
+    position: absolute;
+    top: calc(var(--container-width) * 0);
+    left: 0%;
+    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 2000));
+    font-size: 16px;
+    visibility: hidden;
+}
+
+.sol10_slider {
+    position: absolute;
+    top: calc(var(--container-width) * 0);
+    left: 0%;
+    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 2000));
+    font-size: 16px;
+    visibility: hidden;
+}
+
+.sol11_slider {
+    position: absolute;
+    top: calc(var(--container-width) * 0);
+    left: 0%;
+    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 2000));
+    font-size: 16px;
+    visibility: hidden;
+}
+
+.sol12_slider {
+    position: absolute;
+    top: calc(var(--container-width) * 0);
+    left: 0%;
+    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 2000));
+    font-size: 16px;
+    visibility: hidden;
+}
+
+.sol13_slider {
+    position: absolute;
+    top: calc(var(--container-width) * 0);
+    left: 0%;
+    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 2000));
+    font-size: 16px;
+    visibility: hidden;
+}
+
+.sol14_slider {
+    position: absolute;
+    top: calc(var(--container-width) * 0);
+    left: 0%;
+    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 2000));
+    font-size: 16px;
+    visibility: hidden;
+}
+
 .heater_slider {
     position: absolute;
     top: calc(var(--container-width) * 0.386);
@@ -258,6 +366,51 @@
     font-size: 14px;
 }
 
+.pt15_pressure {
+    position: absolute;
+    top: calc(var(--container-width) * 0);
+    left: 0%;
+    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
+    font-size: 14px;
+    visibility:hidden;
+}
+
+.pt16_pressure {
+    position: absolute;
+    top: calc(var(--container-width) * 0);
+    left: 0%;
+    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
+    font-size: 14px;
+    visibility:hidden;
+}
+
+.pt17_pressure {
+    position: absolute;
+    top: calc(var(--container-width) * 0);
+    left: 0%;
+    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
+    font-size: 14px;
+    visibility:hidden;
+}
+
+.pt18_pressure {
+    position: absolute;
+    top: calc(var(--container-width) * 0);
+    left: 0%;
+    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
+    font-size: 14px;
+    visibility:hidden;
+}
+
+.pt19_pressure {
+    position: absolute;
+    top: calc(var(--container-width) * 0);
+    left: 0%;
+    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
+    font-size: 14px;
+    visibility:hidden;
+}
+
 .tc1_temperature {
     position: absolute;
     top: calc(var(--container-width) * 0.245);
@@ -330,6 +483,33 @@
     font-size: 14px;
 }
 
+.tc10_temperature {
+    position: absolute;
+    top: calc(var(--container-width) * 0);
+    left: 0%;
+    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
+    font-size: 14px;
+    visibility:hidden;
+}
+
+.tc11_temperature {
+    position: absolute;
+    top: calc(var(--container-width) * 0);
+    left: 0%;
+    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
+    font-size: 14px;
+    visibility:hidden;
+}
+
+.tc12_temperature {
+    position: absolute;
+    top: calc(var(--container-width) * 0);
+    left: 0%;
+    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
+    font-size: 14px;
+    visibility:hidden;
+}
+
 .lc1_mass {
     position: absolute;
     top: calc(var(--container-width) * 0.355);
@@ -377,6 +557,16 @@
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
     font-size: 14px;
 }
+
+.lc7_mass {
+    position: absolute;
+    top: calc(var(--container-width) * 0);
+    left: 0%;
+    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
+    font-size: 14px;
+    visibility:hidden;
+}
+
 /*
 .system_state {
     position: absolute;
